<resources>
    <string name="app_name">EmploiNet</string>
    <string name="city_name">EmploiNet</string>
    <string name="email_user">1er site de l’Emploi en Algerie</string>

    <string name="about_text">Offre d\'emploi en Algérie, CV et recrutement sur internet. N°01 du recrutement en Algérie crée en 2002, avec plus de 2000 offres en ligne.‎</string>

    <!-- ==================== GOOGLE API KEY STRING ============================================= -->
    <!--Replace with your own interstitial ad unit id. -->
    <!-- This is an ad unit ID for a test ad. Replace with your own banner ad unit id. -->
    <!-- API KEY FOR MAP -->

    <!-- ==================== OTHERS STRING ==================================================== -->
    <string name="action_settings">Paramètres</string>
    <string name="search_toolbar_hint">Rechercher des offres …</string>
    <string name="dialog_confirm_title">Ok</string>
    <string name="dialog_about_title">Apropos</string>
    <string name="activity_title_settings">Paramètres</string>
    <string name="do_not_cook">لا يطهى</string>
    <string name="add_favorite">ajouté au favoris</string>
    <string name="remove_favorite">supprimé du favoris</string>
    <string name="no_internet">"No internet connection"</string>
    <string name="tap_to_reloading">"Tap to try reloading"</string>

    <string name="dialog_title_permission">Permission confirmation</string>
    <string name="dialog_content_permission">
        To activate all feature from this app you need to granted all required permission.
        \nGo to app permission setting ?
    </string>


    <!-- ==================== Strings related to Splash Screen ================================= -->
    <string name="splash_welcome_text">Bienvenue</string>
    <string name="splash_desc_text">1er site de l’Emploi en Algerie</string>

    <!-- ==================== Settings for Setting ============================================= -->
    <string name="pref_category_notif">parametres de notification</string>
    <string name="pref_category_other">autre parametres</string>

    <string name="pref_title_notif">Notification</string>
    <string name="pref_title_ringtone">sonnerie de notification</string>
    <string name="pref_title_vibrate">vibreur</string>
    <string name="pref_title_cache">vider le cache images</string>
    <string name="pref_title_rate">Evaluer l\'application</string>
    <string name="pref_title_about">Apropos</string>
    <string name="pref_ringtone_silent">silencieux</string>

    <string name="pref_key_notif">key_notifications</string>
    <string name="pref_key_ringtone">key_ringtone</string>
    <string name="pref_key_vibrate">key_vibrate</string>
    <string name="pref_key_reset_cache">key_reset_cache</string>

    <string name="message_clear_image_cache">Are you sure want to clear image cache?</string>
    <string name="message_after_clear_image_cache">Image cache successfully clear</string>
    <string name="title_dialog_theme">Color Theme</string>

    <!-- ==================== Strings related to Drawer Menu =================================== -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_nav_all">Consultez les offres</string>
    <string name="title_nav_fav">Offres enregistrées</string>
    <string name="title_nav_featured">Consulter les CVs</string>

    <string name="title_nav_category">Categories</string>
    <string name="title_nav_period">Infos Emploi</string>
    <string name="title_nav_fetrnit">Top Employeurs</string>
    <string name="title_nav_hotels"></string>
    <string name="title_nav_ent">Paramètres</string>
    <string name="No_internet_btn">Je suis prêt à utiliser le programme sans Internet</string>
    <string name="No_internet_Text">Votre appareil n\'est pas connecté à Internet, Ce programme vous montrera uniquement les offres enregistrés dans l\'appareil, pour afficher tous les offres, veuillez connecter a l\'internet</string>
    <string name="please_wait_fordownl">Chargement d\'autres offres, veuillez patienter …</string>
    <string name="loading_new_offres">Chargement des offres</string>
    <string name="tags">كلمات ذات صلة</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nav_advice"></string>
    <string name="see_more">Voir plus…</string>
    <string name="you_may_like">Autres offres</string>

    <!--exit notification-->

    <string name="banner_ad_unit_id">ca-app-pub-2041047395483384/9583130882</string>
    <string name="native_ad_unit_id_offre_detail">ca-app-pub-2041047395483384/7855471468</string>

    <string name="interstitial_ad_unit_id">ca-app-pub-2041047395483384/5407148972</string>
    <string name="article"> Offre </string>


    <string name="connectez_vous">Connectez-Vous</string>
    <string name="postuler">Postuler</string>
    <string name="detail_de_l_offre">Detail de l\'offre :</string>
    <string name="information_sur_l_offre">Information sur l\'offre</string>
    <string name="signup">Enregistrez vous</string>
    <string name="tandc"><u>termes &amp; conditions</u></string>
    <string name="signin"><u><b>Se connecter</b></u></string>
    <string name="pas_un_membre">Pas un membre?</string>
    <string name="se_connecter">Se connecter</string>
    <string name="mot_de_passe_oubli">mot de passe oublié?</string>
    <string name="se_souvenir_du_mot_de_passe">Se souvenir du mot de passe?</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connectez_avec_facebook">Connectez avec facebook</string>
    <string name="info">Info :</string>
    <string name="refresh_failed">no data</string>
    <string name="nom_d_utilisateur">Nom d\'utilisateur</string>
    <string name="conformez_vous_aux">Conformez-vous aux</string>
    <string name="cr_er_un_compte">Créer un compte</string>
    <string name="facebook_app_id">417225485022986</string>
    <string name="la_une">À la une</string>
    <string name="installer">Installer</string>
    <!-- Strings related to Settings -->
    <string name="next">SUIVANT</string>
    <string name="skip">PASSER</string>
    <string name="start">J\'AI COMPRIS</string>

    <string name="slide_1_title">Soyez visible</string>
    <string name="slide_1_desc">Soyez visible par les recruteur a tout le temps</string>

    <string name="slide_2_title">Soyez notifié</string>
    <string name="slide_2_desc">Soyez notifié l\'hors de publication de toutes nouvelles annonces</string>

    <string name="slide_3_title">Augmentez votre chance</string>
    <string name="slide_3_desc">Vous pouvez postuler à tout moment n\'importe où</string>

    <string name="slide_4_title">Choisissez ce qu\'il vous plait</string>
    <string name="slide_4_desc">Vous povez gerer votre temps a l\'aide de cette application</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
