<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/pref_category_notif">

        <!-- A 'parent' preference, which enables/disables child preferences (below) when checked/unchecked. -->
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/pref_key_notif"
            android:title="@string/pref_title_notif" />

        <!-- Allows the user to choose a ringtone in the 'notification' type_activite. -->
        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->
        <RingtonePreference
            android:defaultValue="content://settings/system/notification_sound"
            android:dependency="@string/pref_key_notif"
            android:key="@string/pref_key_ringtone"
            android:ringtoneType="notification"
            android:title="@string/pref_title_ringtone" />

        <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
        <CheckBoxPreference
            android:defaultValue="true"
            android:dependency="@string/pref_key_notif"
            android:key="@string/pref_key_vibrate"
            android:title="@string/pref_title_vibrate" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/pref_category_other">
        <Preference
            android:title="@string/pref_title_cache"
            android:key="@string/pref_key_reset_cache"/>
        <!--<Preference
            android:title="@string/pref_title_theme"
            android:key="@string/pref_key_theme"/>-->
        <Preference
            android:title="@string/pref_title_rate"
            android:key="key_rate"/>
        <Preference
            android:title="@string/pref_title_about"
            android:key="key_about"/>
    </PreferenceCategory>

</PreferenceScreen>
