<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <group>
            <item
                android:id="@+id/nav_all"
                android:icon="@drawable/job"
                android:title="@string/title_nav_all" />

            <item
                android:id="@+id/nav_favorites"
                android:icon="@drawable/save"
                android:title="@string/title_nav_fav"
                app:actionLayout="@layout/menu_counter" />
            <item
                android:id="@+id/nav_cvs"
                android:icon="@drawable/resume"
                android:title="@string/title_nav_featured"
                android:visible="true"/>
        </group>


        <item
            android:id="@+id/nav_category"
            android:icon="@drawable/folder"
            android:title="@string/title_nav_category" />
        <item
            android:id="@+id/nav_period"
            android:icon="@drawable/coaching"
            android:title="@string/title_nav_period" />
        <item
            android:id="@+id/nav_fetrnit"
            android:icon="@drawable/topemployee"
            android:title="@string/title_nav_fetrnit" />



        <item

            android:title=""
            android:visible="true" />
        <item
            android:id="@+id/nav_apps"
            android:icon="@drawable/settings"
            android:title="@string/title_nav_ent" />
        <!-- <item
             android:id="@+id/nav_sport"
             android:icon="@drawable/ic_nav_sport"
             android:title="@string/title_nav_sport" />
         <item
             android:id="@+id/nav_shop"
             android:icon="@drawable/ic_nav_shop"
             android:title="@string/title_nav_shop" />
         <item
             android:id="@+id/nav_transport"
             android:icon="@drawable/ic_nav_transport"
             android:title="@string/title_nav_transport" />
         <item
             android:id="@+id/nav_religion"
             android:icon="@drawable/ic_nav_religion"
             android:title="@string/title_nav_religion" />
         <item
             android:id="@+id/nav_public"
             android:icon="@drawable/ic_nav_public"
             android:title="@string/title_nav_public" />
         <item
             android:id="@+id/nav_money"
             android:icon="@drawable/ic_nav_money"
             android:title="@string/title_nav_money" />-->
    </group>
    <!--Tourist Destination-->
    <!--Food & Drink-->
    <!--Hotels-->
    <!--Entertainment-->
    <!--Sport-->
    <!--Shopping-->
    <!--Transportation-->
    <!--Religion-->
    <!--Public Services-->
    <!--Money-->

</menu>
