<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mba2dna.apps.EmploiNet.activities.ActivityLogin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scaleType="centerCrop" />



    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/fbl"
        android:layout_marginBottom="70dp"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/head"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/loginlogo"
            android:textColor="@color/Tex" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/fbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/or"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/rect_normal_facebook"
        android:elevation="1.5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/fb" />

        <TextView
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/connectez_avec_facebook"
            android:textColor="@color/White"
            android:textSize="@dimen/text" />
    </LinearLayout>


    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linear"
        android:gravity="center"
        android:lines="1"
        android:text="ou"
        android:textColor="@color/textSub"


        />


    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signin1"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:gravity="left"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"


                />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@color/colorPrimary" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colortext"
            android:textColorHint="@color/colorhint">


            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="16dp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"


                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:background="@color/colorPrimary" />

        <LinearLayout
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:gravity="center"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/checkbocremember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:buttonTint="@color/textSub"
                    android:checked="true"
                    />

                <TextView
                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/se_souvenir_du_mot_de_passe"
                    android:textColor="@color/textSub"
                    android:textSize="@dimen/textsub"
                    />
            </LinearLayout>
            <TextView

                android:id="@+id/forgotpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="50dp"
                android:gravity="right"
                android:text="@string/mot_de_passe_oubli"
                android:textColor="@color/textSub"
                android:textSize="@dimen/textsub"

                />


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:id="@+id/signin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/signinline"
        android:layout_marginBottom="26dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rect_normal_orange"
        android:elevation="1.5dp"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/se_connecter"
        android:textColor="#fff"
        android:textSize="@dimen/text" />


    <LinearLayout
        android:id="@+id/signinline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="3dp"
            android:gravity="center"
            android:text="@string/pas_un_membre"
            android:textColor="@color/textSub"
            android:textSize="@dimen/textsub"

            />

        <TextView

            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="3dp"
            android:gravity="center"
            android:text="@string/signup"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/textsub"
            />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/lyt_progress"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#A0FFFFFF"
        android:elevation="2dp"
        android:visibility="gone">
        <com.github.rahatarmanahmed.cpv.CircularProgressView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="60dp"
            android:layout_margin="@dimen/spacing_mxlarge"

            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_height="60dp"
            app:cpv_animAutostart="true"
            app:cpv_indeterminate="true"
            app:cpv_thickness="3dp"
            app:cpv_color="@color/colorAccent"/>
    </RelativeLayout>


</RelativeLayout>




