<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mba2dna.apps.EmploiNet.activities.ActivityRegister">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"


        >
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:scaleType="centerCrop"
            />


    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_above="@+id/fbl"
        android:layout_marginBottom="60dp"

        >
        <ImageView
            android:id="@+id/head"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/loginlogo"
            android:textColor="@color/Tex" /></LinearLayout>

    <LinearLayout
        android:id="@+id/fbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/or"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/rect_normal_facebook"
        android:elevation="1.5dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:src="@drawable/fb" />

        <TextView
            android:id="@+id/fb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/connectez_avec_facebook"
            android:textColor="@color/White"
            android:textSize="@dimen/text" />
    </LinearLayout>


    <TextView
        android:id="@+id/or"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="ou"
        android:layout_above="@+id/linear"
        android:gravity="center"

        android:textColor="@color/textSub"
        />



    <LinearLayout
        android:layout_above="@+id/signin1"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="10dp"
        >


        <android.support.design.widget.TextInputLayout
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <EditText
                android:textSize="@dimen/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_d_utilisateur"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:textColorHint="@color/textSub"
                android:textColor="@color/Tex"
                android:background="#0000"
                android:padding="14dp"
                android:gravity="left"
                android:lines="1"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="17dp"
                />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/user"
                android:drawablePadding="12dp"
                android:gravity="left"
                android:hint="Email"
                android:inputType="textEmailAddress"
                android:lines="1"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"
                />

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorhint"
            android:textColor="@color/colortext">



            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="46dp"
                android:layout_marginRight="46dp"
                android:background="#0000"
                android:drawableLeft="@drawable/pass"
                android:drawablePadding="16dp"
                android:hint="@string/mot_de_passe"
                android:inputType="textPassword"
                android:padding="14dp"
                android:textColor="@color/Tex"
                android:textColorHint="@color/textSub"
                android:textSize="@dimen/text"


                />
        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_marginLeft="56dp"
            android:layout_marginRight="56dp"
            android:layout_height="1dp"
            android:background="@color/colorAccent"/>

        <LinearLayout

            android:layout_marginTop="12dp"
            android:id="@+id/linear4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp"

            >
            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                >
                <CheckBox
                    android:id="@+id/checkbocremember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:buttonTint="@color/textSub"
                    />
                <TextView

                    android:id="@+id/remember"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/conformez_vous_aux"
                    android:textColor="@color/textSub"
                    android:layout_gravity="center"
                    android:textSize="@dimen/textsub"

                    /></LinearLayout>
            <TextView

                android:id="@+id/forgotpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tandc"
                android:textColor="@color/colorPrimaryDark"
                android:layout_gravity="center"
                android:textSize="@dimen/textsub"
                android:gravity="right"
                android:layout_marginLeft="5dp"

                />


        </LinearLayout>


    </LinearLayout>


    <TextView
        android:layout_above="@+id/signupline"
        android:id="@+id/signin1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rect_normal"
        android:text="@string/cr_er_un_compte"
        android:textSize="@dimen/text"
        android:textColor="#fff"
        android:gravity="center"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:padding="12dp"
        android:layout_marginBottom="26dp"
        android:elevation="1.5dp" />




    <LinearLayout
        android:id="@+id/signupline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:layout_marginBottom="35dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vous avez un compte ?"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="@color/textSub"
            android:textSize="@dimen/textsub"
            android:layout_marginRight="3dp"

            />

        <TextView

            android:id="@+id/signin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signin"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/textsub"
            android:layout_marginLeft="3dp"

            />
    </LinearLayout>











</RelativeLayout>




